@@ -1,3 +1,4 @@
+* Add domain on location's parent and childs
 * Do not filter out inactive products from stock computation
 
 Version 3.4.0 - 2014-10-20
